--- a/src/components/particles/Header/style.css
+++ b/src/components/particles/Header/style.css
@@ -1,12 +1,8 @@
-header {
-  height: 40px;
-  margin: 0 auto;
-  padding: 20px 0;
-  text-align: center;
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+.img-telephone {
+  height: 20px;
+  width: 20px;
 }
 
-header svg {
-  display: block;
-  width: 100%; height: 100%;
+.navbar-brand span {
+  margin-left: 8px;
 }
