--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
-html, body, h1, h2, h3, ul, li {
+html,
+body,
+h1,
+h2,
+h3,
+ul,
+li {
   margin: 0;
   padding: 0;
   border: 0;
@@ -23,5 +29,6 @@ header {
 
 header svg {
   display: block;
-  width: 100%; height: 100%;
+  width: 100%;
+  height: 100%;
 }
