--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@ li {
 
 body {
   background: #233142;
-  font-family: helvetica, arial, sans-serif;
+  /* font-family: helvetica, arial, sans-serif; */
+  font-family: 'Cabin', sans-serif;
   font-size: 13px;
   color: #333333;
   line-height: 1;
