--- a/src/App.css
+++ b/src/App.css
@@ -8,23 +8,19 @@
   right: 0;
   bottom: 0;
 }
- 
 #root .app-container {
   width: 376px;
-  height: 666px;
+  height: 672px;
   /* z-index: 100; */
-
   background: white;
-  border-radius: 3px;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, .9);
-  
+  border-radius: 5px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.9);
 }
-
 #root .container-view {
   padding: 20px;
 }
-
-.view-wrapper{
-  overflow-y: scroll; height:400px;
-  height: 666px
+.view-wrapper {
+  overflow-y: scroll;
+  height: 400px;
+  height: 666px;
 }
