--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,10 @@
 #root {
-  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
 }
 #root .app-container {
-  width: 376px;
-  height: 672px;
+ min-width: 376px;
   background: white;
   border-radius: 5px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.9);
@@ -20,6 +14,8 @@
 }
 .view-wrapper {
   overflow-y: scroll;
-  height: 400px;
-  height: 666px;
+}
+
+.app-container {
+  height: 100vh;
 }
