--- a/src/components/particles/Header/style.css
+++ b/src/components/particles/Header/style.css
@@ -37,7 +37,7 @@ div.navbar-brand span {
   font-size: 1rem !important;
 }
 
-.place-first div{  
+.place-first div {
   padding-left: 8px;
   padding-top: 8px;
 }
@@ -71,7 +71,7 @@ div.navbar-brand span {
   content: "";
   height: 20px;
   width: 68px;
-  background-color: #f8f9fa; 
+  background-color: #f8f9fa;
   position: absolute;
   left: 60px;
   top: 25px;
@@ -112,4 +112,10 @@ div.navbar-brand span {
   left: -85px;
   top: -1px;
   z-index: -2;
+}
+
+@media screen and (max-width: 502px) {
+  .place-second {
+    width: calc( 100% - 128px);
+  }
 }
